# arelang

./: .gitignore  Cargo.toml  DECISIONS.md  MVP_STATUS.md  README.md  ROADMAP.md  are
.github/workflows/: mvp-smoke.yml
crates/are-ast/: Cargo.toml
crates/are-ast/src/: lib.rs
crates/are-audit/: Cargo.toml
crates/are-audit/src/: lib.rs
crates/are-cli/: Cargo.toml
crates/are-cli/src/: main.rs
crates/are-diagnostics/: Cargo.toml
crates/are-diagnostics/src/: lib.rs
crates/are-format/: Cargo.toml
crates/are-format/src/: lib.rs
crates/are-http-runtime/: Cargo.toml
crates/are-http-runtime/src/: contracts.rs  errors.rs  functions.rs  host.rs  lib.rs  openapi.rs  request.rs  response.rs  scenarios.rs  schemas.rs  server.rs  store.rs  tests.rs
crates/are-interpreter/: Cargo.toml
crates/are-interpreter/src/: error.rs  host.rs  lib.rs  value.rs
crates/are-lexer/: Cargo.toml
crates/are-lexer/src/: lib.rs
crates/are-parser/: Cargo.toml
crates/are-parser/src/: lib.rs  support.rs  tests.rs
crates/are-project/: Cargo.toml
crates/are-project/src/: lib.rs
crates/are-resolver/: Cargo.toml
crates/are-resolver/src/: lib.rs
crates/are-semantics/: Cargo.toml
crates/are-semantics/src/: lib.rs
crates/are-typecheck/: Cargo.toml
crates/are-typecheck/src/: body.rs  http.rs  lib.rs  tests.rs  validation.rs
examples/hello_api/: are.toml  main.are
examples/users_api/: are.toml  main.are
scripts/: mvp-smoke.sh
spec/: compiler.md  http-mvp.md  syntax.md
