[workspace]
members = [
    "crates/are-ast",
    "crates/are-cli",
    "crates/are-diagnostics",
    "crates/are-lexer",
    "crates/are-parser",
    "crates/are-resolver",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/enzogagarin/arelang"
rust-version = "1.91"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
