[package]
name = "are-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
are-http-runtime = { path = "../are-http-runtime" }
are-project = { path = "../are-project" }
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
