[package]
name = "are-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "are"
path = "src/main.rs"

[dependencies]
are-diagnostics = { path = "../are-diagnostics" }
are-lexer = { path = "../are-lexer" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[lints]
workspace = true

