[package]
name = "are-http-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
are-ast = { path = "../are-ast" }
are-project = { path = "../are-project" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[lints]
workspace = true

