[package]
name = "are-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
are-ast = { path = "../are-ast" }
serde_json = "1.0"

[dev-dependencies]
are-lexer = { path = "../are-lexer" }
are-parser = { path = "../are-parser" }

[lints]
workspace = true

