[package]
name = "are-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
are-ast = { path = "../are-ast" }
are-diagnostics = { path = "../are-diagnostics" }
are-lexer = { path = "../are-lexer" }

[lints]
workspace = true

