[package]
name = "are-project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
are-ast = { path = "../are-ast" }
are-diagnostics = { path = "../are-diagnostics" }
are-lexer = { path = "../are-lexer" }
are-parser = { path = "../are-parser" }
are-resolver = { path = "../are-resolver" }
are-typecheck = { path = "../are-typecheck" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"

[lints]
workspace = true

