[package]
name = "are-typecheck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
are-ast = { path = "../are-ast" }
are-diagnostics = { path = "../are-diagnostics" }
are-semantics = { path = "../are-semantics" }

[dev-dependencies]
are-lexer = { path = "../are-lexer" }
are-parser = { path = "../are-parser" }
are-resolver = { path = "../are-resolver" }

[lints]
workspace = true
